--- a/MyVideo/Views/Home/Movie.cshtml
+++ b/MyVideo/Views/Home/Movie.cshtml
@@ -5,8 +5,25 @@
 
 <div class="row">
     <div class="col-md-12">
-        <video controls="controls" autoplay="autoplay" width="100%" height="100%">
-            <source src="@ViewBag.movieSubPath" type="video/mp4" />
-        </video>
+        <div class="media">
+            <video id="mainVideo" controls="controls" autoplay="autoplay" width="100%" height="100%">
+                <source src="@ViewBag.movieSubPath" type="video/mp4" />
+            </video>
+        </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-2">
+        <p>
+            选择播放速率：<select id="selRate">
+                <option value="0.75">0.5</option>
+                <option value="1" selected>1.0</option>
+                <option value="1.25">1.25</option>
+                <option value="1.5">1.5</option>
+                <option value="2">2.0</option>
+            </select>
+        </p>
+        <p><button id="btnPlay" class="btn btn-default">播放/暂停</button></p>
+    </div>
+</div>
+
